--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -124,7 +124,7 @@ body.route-screening-40-plus .footer {
 .footer-bottom {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 40px 0px 15px 0px;
+    padding: 30px 0px 30px 0px;
 
     display: flex;
     align-items: center;
